--- a/nginx.yaml
+++ b/nginx.yaml
@@ -10,7 +10,7 @@ metadata:
     # Container Image Automated Updates
     flux.weave.works/automated: "true"
     # do not apply this manifest on the cluster
-    #flux.weave.works/ignore: "false"
+    flux.weave.works/ignore: "false"
 spec:
   replicas: 1
   selector:
