--- a/deployment.yaml
+++ b/deployment.yaml
@@ -10,9 +10,9 @@ metadata:
     # Container Image Automated Updates
     flux.weave.works/automated: "true"
     # do not apply this manifest on the cluster
-    flux.weave.works/ignore: "true"
+    #flux.weave.works/ignore: "true"
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: frontend
