--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,6 +26,8 @@ spec:
       containers:
       - name: frontend
         image: 648064107398.dkr.ecr.us-west-2.amazonaws.com/bank-frontend:0bb28eb
+        securityContext:
+          runAsNonRoot: true
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
